<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground3"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="387dp"
        android:layout_height="227dp"
        android:contentDescription="@string/img_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/helarticologo1" />

    <EditText
        android:id="@+id/edtDoc"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="name"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edTDocumento"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/Text2pass"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="password"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edT_pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TView_bienvenida"
        android:textColor="@color/titlesLight"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="194dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_design_circular"
        android:text="@string/btn_ingreso"
        android:textColor="@drawable/txt_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="194dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_design_circular"
        android:text="@string/btn_registro"
        android:textColor="@drawable/txt_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.864" />

    <Button
        android:id="@+id/btnOlvidar"
        android:layout_width="249dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/main"
        android:text="@string/btn_olvidar"
        android:textColor="@color/textBtn"
        android:textColorLink="@color/gray_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imgViewUserIcon"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:contentDescription="@string/img_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519"
        app:srcCompat="@drawable/usuario" />

    <ImageView
        android:id="@+id/imgKeyIcon"
        android:layout_width="21dp"
        android:layout_height="24dp"
        android:contentDescription="@string/img_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        app:srcCompat="@drawable/llavev2" />

    <ImageButton
        android:id="@+id/imgBtnvisibility"
        android:layout_width="69dp"
        android:layout_height="78dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btnVisibility"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

    <ProgressBar
        android:id="@+id/pBarbtns"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/dark_gray"
        android:indeterminate="true"
        android:indeterminateTint="@color/btnclaro"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />
</androidx.constraintlayout.widget.ConstraintLayout>