<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signplantilla"
    tools:context=".activities.RegistroUser">

    <ImageButton
        android:id="@+id/btnBack2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="105dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img_goBack"
        android:src="@drawable/baseline_arrow_back_34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edT_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/edtDocument"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="phone"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edTDocumento"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <EditText
        android:id="@+id/edtCell"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="phone"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edTCelular"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="name"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edtNombre"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <EditText
        android:id="@+id/edTusuario"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:autofillHints="name"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edtApellidos"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="194dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_design_circular"
        android:textColor="@drawable/txt_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:backgroundTint="@null"
        android:text="@string/btn_continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <ImageView
        android:id="@+id/imgVIce1"
        android:layout_width="229dp"
        android:layout_height="191dp"
        android:contentDescription="@string/img_helado1"
        app:layout_constraintBottom_toTopOf="@+id/edtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icecreamdossinfondo" />

    <ProgressBar
        android:id="@+id/pBarbtns"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/dark_gray"
        android:indeterminate="true"
        android:indeterminateTint="@color/btnclaro"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgVIce1"
        app:layout_constraintVertical_bias="0.945" />

    <EditText
        android:id="@+id/edTrol"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/rol"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <EditText
        android:id="@+id/edTcontra"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/titlesLight"
        android:ems="10"
        android:hint="@string/edTpassword"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />
</androidx.constraintlayout.widget.ConstraintLayout>